# robo_1

./: README.md
robo_1_description/: CMakeLists.txt  package.xml
robo_1_description/launch/: display.launch.xml
robo_1_description/urdf/: camera.xacro  common_properties.xacro  lidar.xacro  mobile.gazebo.xacro  mobile.urdf.xacro  robo_1.urdf.xacro
robo_1_master/: CMakeLists.txt  package.xml
robo_1_master/config/: gazebo_bridge.yaml
robo_1_master/launch/: display.launch.xml
robo_1_master/rviz/: config.rviz
robo_1_master/src/: camera.cpp  check_distance.cpp  control.cpp  main_brain.cpp  minimal_parameter.cpp  publisher.cpp
